# gitprbot

./: .env.example  .gitignore  Makefile  README.md  dedalus-agent-build-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/versions/: 001_initial_schema.sql
scripts/: create_github_app.py  deploy_orchestrator.py  provision_repo.py
src/gitprbot/: config.py  main.py
src/gitprbot/agent/: loop.py  prompts.py  repair.py  tree_reset.py
src/gitprbot/auth/: __init__.py  github_app.py  hmac_verify.py
src/gitprbot/db/: __init__.py  connection.py  costs.py  jobs.py  locks.py  repos.py  schema.py  webhooks.py
src/gitprbot/github/: __init__.py  client.py  normalizer.py
src/gitprbot/machines/: __init__.py  bootstrap.py  client.py  errors.py  runner.py
src/gitprbot/memory/: __init__.py  consolidator.py  embeddings.py  reader.py  sanitizer.py  writer.py
src/gitprbot/models/: __init__.py  client.py  costs.py  router.py
src/gitprbot/observability/: __init__.py  alerts.py  logging.py  metrics.py
src/gitprbot/poller/: __init__.py  reconciler.py
src/gitprbot/tools/: __init__.py  dispatch.py  machine_tools.py  orchestrator_tools.py  schemas.py
src/gitprbot/webhook/: handlers.py  router.py
src/gitprbot/worker/: pr_flow.py  queue.py  worker.py
tests/: conftest.py  test_agent_loop.py  test_auth.py  test_db_locks.py  test_machines.py  test_memory.py  test_tools.py  test_webhook.py
