[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gitprbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "dedalus-labs>=0.1",
    "dedalus_sdk>=0.1",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "tiktoken>=0.7",
    "structlog>=24.1",
]

[project.scripts]
gitprbot = "gitprbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
